kubernetes/apps/n8n/middleware-n8n.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-n8n
  namespace: n8n
spec:
  stripPrefix:
    prefixes:
      - /n8n
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-proto
  namespace: n8n
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
