kubernetes/apps/n8n/middleware-strip.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-n8n
  namespace: n8n
spec:
  stripPrefix:
    prefixes:
      - /n8n
