kubernetes/apps/n8n/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: add-n8n-prefix
  namespace: n8n
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Prefix: "/n8n"
