kubernetes/apps/n8n/ingressroute-lan.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n-lan
  namespace: n8n
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`192.168.0.100`) && PathPrefix(`/n8n`)
      kind: Rule
      middlewares:
        - name: strip-n8n
      services:
        - name: n8n
          port: 5678
    - match: Host(`192.168.0.100`) && PathPrefix(`/static`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`192.168.0.100`) && PathPrefix(`/assets`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`192.168.0.100`) && PathPrefix(`/healthz`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`192.168.0.100`) && PathPrefix(`/rest`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`192.168.0.100`) && PathPrefix(`/webhook`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`192.168.0.100`) && PathPrefix(`/webhook-test`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`192.168.0.100`) && PathPrefix(`/home`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`192.168.0.100`) && PathPrefix(`/workflow`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`192.168.0.100`) && PathPrefix(`/workflows`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`192.168.0.100`) && PathPrefix(`/credential`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`192.168.0.100`) && PathPrefix(`/credentials`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`192.168.0.100`) && PathPrefix(`/execution`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`192.168.0.100`) && PathPrefix(`/executions`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`192.168.0.100`) && PathPrefix(`/settings`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`192.168.0.100`) && PathPrefix(`/oauth`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`192.168.0.100`) && PathPrefix(`/oauth2-credential`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`192.168.0.100`) && PathPrefix(`/signin`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`192.168.0.100`) && PathPrefix(`/signup`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`192.168.0.100`) && PathPrefix(`/node-view`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`192.168.0.100`) && PathPrefix(`/types`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
