kubernetes/apps/n8n/ingressroute-port.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lucasrocha.dpdns.org`) && PathPrefix(`/n8n`)
      kind: Rule
      middlewares:
        - name: strip-n8n
      services:
        - name: n8n
          port: 5678
    - match: Host(`lucasrocha.dpdns.org`) && PathPrefix(`/static`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`lucasrocha.dpdns.org`) && PathPrefix(`/assets`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`lucasrocha.dpdns.org`) && PathPrefix(`/healthz`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`lucasrocha.dpdns.org`) && PathPrefix(`/types`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`lucasrocha.dpdns.org`) && PathPrefix(`/rest`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`lucasrocha.dpdns.org`) && PathPrefix(`/webhook`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
    - match: Host(`lucasrocha.dpdns.org`) && PathPrefix(`/webhook-test`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
  tls:
    certResolver: letsencrypt
