kubernetes/apps/n8n/ingressroute-tunnel.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n-tunnel
  namespace: n8n
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`n8n.lucasrocha.dpdns.org`) && PathPrefix(`/n8n`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
      middlewares:
        - name: strip-n8n
          namespace: n8n
        - name: add-n8n-prefix
          namespace: n8n
    - match: Host(`n8n.lucasrocha.dpdns.org`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
      middlewares:
        - name: redirect-n8n-root
          namespace: n8n
